VQ-1330:: Occupation n Country Modifications

--- a/src/app/features/crm/components/country/country.component.html
+++ b/src/app/features/crm/components/country/country.component.html
@@ -127,7 +127,7 @@
                     id="administrativeUnit"
                     class="form-select mb-1"
                     formControlName="administrativeUnit"
-                    (change)="onCityChange($event); updateCardTitles()"
+                    (change)="updateCardTitles()"
                   >
                     <option value="" selected>
                       Select Administrative Unit
