--- a/src/app/features/lms/grp/components/dashboard/components/admin-pension-listing/admin-pension-listing.component.html
+++ b/src/app/features/lms/grp/components/dashboard/components/admin-pension-listing/admin-pension-listing.component.html
@@ -5,77 +5,31 @@
     </div>
     <div class="container">
         <div class="title"><span id="title">Pension</span></div>
-        <div *ngIf="memberPolicies && memberPolicies.length > 0" class="box" (click)="navigateToPensionDets()">
-            <label class="active-label">{{ getStatusDescription(memberPolicies[0]?.status) }}</label>
-            <div class="scroll-content">
-                <table>
-                    <tr>
-                        <td>Policy:</td>
-                        <td class="td-data">{{ memberPolicies[0]?.description | titlecase }}</td>
-                    </tr>
-                    <tr>
-                        <td>Policy number:</td>
-                        <td class="td-data">{{ memberPolicies[0]?.policy_number | titlecase }}</td>
-                    </tr>
-                    <tr>
-                        <td>Policy members:</td>
-                        <td class="td-data">{{ memberPolicies[0]?.policy_members }}</td>
-                    </tr>
-                    <tr>
-                        <td>Fund value:</td>
-                        <td class="td-data">{{ memberPolicies[0]?.sum_assured | number }}</td>
-                    </tr>
-                </table>
+        <ng-container *ngIf="pensionList && pensionList.length > 0">
+            <div *ngFor="let pension of pensionList; let i = index" class="box" (click)="navigateToPensionDets(pension.policy_code)">
+                <label class="active-label">{{ getStatusDescription(pension.pol_status) }}</label>
+                <div class="scroll-content">
+                    <table>
+                        <tr>
+                            <td>Policy:</td>
+                            <td class="td-data">{{ pension.product_description | titlecase }}</td>
+                        </tr>
+                        <tr>
+                            <td>Policy number:</td>
+                            <td class="td-data">{{ pension.policy_number }}</td>
+                        </tr>
+                        <tr>
+                            <td>Policy members:</td>
+                            <td class="td-data">{{ pension.no_of_members }}</td>
+                        </tr>
+                        <tr>
+                            <td>Fund value:</td>
+                            <td class="td-data">{{ pension.sum_assured | number }}</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
-        </div>
+        </ng-container>
 
-
-        <div *ngIf="memberPolicies && memberPolicies.length > 1" class="box" (click)="navigateToPensionDets()">
-            <label class="active-label">{{ getStatusDescription(memberPolicies[1]?.status) }}</label>
-            <div class="scroll-content">
-                <table>
-                    <tr>
-                        <td>Policy:</td>
-                        <td class="td-data">{{ memberPolicies[1]?.description | titlecase }}</td>
-                    </tr>
-                    <tr>
-                        <td>Policy number:</td>
-                        <td class="td-data">{{ memberPolicies[1]?.policy_number | titlecase }}</td>
-                    </tr>
-                    <tr>
-                        <td>Policy members:</td>
-                        <td class="td-data">{{ memberPolicies[1]?.policy_members }}</td>
-                    </tr>
-                    <tr>
-                        <td>Fund value:</td>
-                        <td class="td-data">{{ memberPolicies[1]?.sum_assured | number }}</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-
-        <div *ngIf="memberPolicies && memberPolicies.length > 2" class="box" (click)="navigateToPensionDets()">
-            <label class="active-label">{{ getStatusDescription(memberPolicies[2]?.status) }}</label>
-            <div class="scroll-content">
-                <table>
-                    <tr>
-                        <td>Policy:</td>
-                        <td class="td-data">{{ memberPolicies[2]?.description | titlecase }}</td>
-                    </tr>
-                    <tr>
-                        <td>Policy number:</td>
-                        <td class="td-data">{{ memberPolicies[2]?.policy_number | titlecase }}</td>
-                    </tr>
-                    <tr>
-                        <td>Policy members:</td>
-                        <td class="td-data">{{ memberPolicies[2]?.policy_members }}</td>
-                    </tr>
-                    <tr>
-                        <td>Fund value:</td>
-                        <td class="td-data">{{ memberPolicies[2]?.sum_assured | number }}</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
     </div>
 </div>
