VQ-1536: Reinsurance Summary

--- a/src/app/features/lms/ind/components/reinsurance/components/summary/summary.component.html
+++ b/src/app/features/lms/ind/components/reinsurance/components/summary/summary.component.html
@@ -15,7 +15,7 @@
         class="fw-medium d-flex justify-content-center"
         style="font-size: 0.8rem"
       >
-        {{ "Summary" | uppercase }}
+        {{ "Reinsurance Summary" | uppercase }}
       </div>
 
       <ngx-spinner name="lms_ind_view" type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
