--- a/src/app/features/fms/cheque-authorization/cheque-authorization.component.css
+++ b/src/app/features/fms/cheque-authorization/cheque-authorization.component.css
@@ -72,3 +72,16 @@ ul.dropdown-menu li:hover {
   top: 50%;
   height: 20%;
 }
+.doc-name {
+  display: inline-block;
+  width: 172px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: middle;
+}
+
+.form-label {
+  display: flex;
+  align-items: center;
+}
