--- a/src/app/features/administration/components/tickets/mass-document-dispatch/mass-document-dispatch.component.html
+++ b/src/app/features/administration/components/tickets/mass-document-dispatch/mass-document-dispatch.component.html
@@ -145,7 +145,7 @@
           <div class="col-8">
 
             <!-- carousel -->
-            <div id="documentCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div id="documentCarousel" class="carousel slide">
               <div class="carousel-inner">
                 <ng-container *ngIf="reportList.length > 0">
                   <div class="carousel-item" *ngFor="let doc of reportList; let i = index" [class.active]="i === 0">
